<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.kinga.meritraknare_material.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:paddingBottom="32dp">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="50dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/courseCount_tv"
                            android:gravity="center_vertical"
                            android:text="@string/course_count"
                            android:textColor="#000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/courseCount_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textColor="#707070"
                            android:textSize="16sp"
                            tools:text="22" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/grades_value_tv"
                            android:gravity="center_vertical"
                            android:text="@string/grades_value"
                            android:textColor="#000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/grades_value_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textColor="#707070"
                            android:textSize="16sp"
                            tools:text="30600" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"

                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/pointsSum_tv"
                            android:gravity="center_vertical"
                            android:text="@string/points_sum"
                            android:textColor="#000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/pointsSum_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textColor="#707070"
                            android:textSize="16sp"
                            tools:text="1800" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/comparison_sum_tv"
                            android:gravity="center_vertical"
                            android:text="@string/comparison_sum"
                            android:textColor="#000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/comparison_sum_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textColor="#707070"
                            android:textSize="16sp"
                            tools:text="17.0" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:layout_gravity="center"
                            android:layout_toStartOf="@+id/meriter_spinner"
                            android:gravity="center_vertical"
                            android:text="@string/extras"
                            android:textColor="#000"
                            android:textSize="16sp" />

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/meriter_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp">

                        </android.support.v7.widget.AppCompatSpinner>
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorPrimaryDark"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_gravity="center"
                            android:layout_toStartOf="@+id/meritvarde_tv"
                            android:gravity="center_vertical"
                            android:text="@string/rating"
                            android:textColor="#000"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/meritvarde_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:gravity="center_vertical|end"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            tools:text="19.0" />

                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <ImageView
                            android:id="@+id/done_imageView"
                            style="@style/Widget.MeritRaknare.ResultButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/done"
                            android:src="@drawable/ic_confirm"
                            android:backgroundTint="@color/colorAccent"
                            />

                        <ImageView
                            android:id="@+id/share_imageView"
                            style="@style/Widget.MeritRaknare.ResultButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/share"
                            android:background="@drawable/right_corner_rounded_background"
                            android:backgroundTint="#1ab369"
                            android:src="@drawable/ic_share" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginStart="32dp"-->
                <!--android:layout_marginEnd="32dp"-->
                <!--android:elevation="21dp"-->
                <!--android:gravity="center"-->
                <!--app:layout_anchor="@+id/cardView"-->
                <!--app:layout_anchorGravity="center|bottom">-->

                <!--<ImageView-->
                    <!--android:id="@+id/done_imageView"-->
                    <!--style="@style/Widget.MeritRaknare.TextViewButton.Primary"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginEnd="16dp"-->
                    <!--android:contentDescription="@string/done"-->
                    <!--android:src="@drawable/ic_confirm" />-->

                <!--<ImageView-->
                    <!--android:id="@+id/share_imageView"-->
                    <!--style="@style/Widget.MeritRaknare.TextViewButton.Primary"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:contentDescription="@string/share"-->
                    <!--android:src="@drawable/ic_share" />-->
            <!--</LinearLayout>-->
        </android.support.design.widget.CoordinatorLayout>

        <!--<android.support.design.circularreveal.cardview.CircularRevealCardView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="16dp"-->
            <!--android:layout_marginTop="32dp"-->
            <!--android:layout_marginEnd="16dp"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--app:cardCornerRadius="10dp"-->
            <!--app:cardElevation="20dp">-->

            <!--<ImageView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="top"-->
                <!--android:adjustViewBounds="true"-->
                <!--android:contentDescription="@string/kurskod_eller_namn"-->
                <!--android:foregroundGravity="top"-->
                <!--android:padding="4dp"-->
                <!--android:scaleType="fitXY"-->
                <!--android:src="@drawable/vhs_ill_arial_vagen" />-->
        <!--</android.support.design.circularreveal.cardview.CircularRevealCardView>-->

<!--
        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="54dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:layout_alignParentStart="true"
                    />
                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/language_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    >

                </android.support.v7.widget.AppCompatSpinner>
            </RelativeLayout>
        </android.support.design.card.MaterialCardView>
-->
    </LinearLayout>
</ScrollView>
